# web-toolkit

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  web.Containerfile
src/webtoolkit/: __init__.py  __main__.py  example.py  parsing.py  url_parsing.py
tests/: test_example.py
webtoolkit/: base.py
