[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webtoolkit"
version = "0.1.0"
description = "Toolkit for templated HTTP requests and rich response parsing."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
  "jsonpath-ng>=1.5.3",
  "yarl>=1.9",
  "lxml>=4.9",
]

[project.scripts]
webtoolkit-example = "webtoolkit.example:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/webtoolkit"]

[tool.hatch.build.targets.sdist]
include = [
  "src/webtoolkit",
  "README.md",
  "requirements.txt",
]
